[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/ui/menu_popup_panel.png" type="Texture" id=1]
[ext_resource path="res://resources/shaders/blur.gdshader" type="Shader" id=2]
[ext_resource path="res://source/scenes/menu/settings_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/menu_exit_button.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/menu_exit_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/pik.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sprites/ui/menu_settings_button.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/menu_settings_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/LittleThings-ZX5Z.ttf" type="DynamicFontData" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/lod = 3.0
shader_param/apply = true

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 9
outline_color = Color( 0.129412, 0.129412, 0.137255, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 10
outline_color = Color( 0.129412, 0.129412, 0.137255, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
font_data = ExtResource( 9 )

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuPopupPanel" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1052.0
margin_top = 54.0
margin_right = 1173.0
margin_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 60, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="PikSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sfx"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 160
custom_constants/margin_top = 100
custom_constants/margin_left = 150
custom_constants/margin_bottom = 73

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 150.0
margin_top = 100.0
margin_right = 1153.0
margin_bottom = 647.0
mouse_filter = 2

[node name="SettingsTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1003.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=#ede19e][b]SETTINGS[/b][/color][/center]"
meta_underlined = false
text = "SETTINGS"
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 1003.0
margin_bottom = 58.0
custom_styles/separator = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 1003.0
margin_bottom = 547.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 1003.0
margin_bottom = 465.0

[node name="Column1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 521.0
margin_bottom = 445.0

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1"]
margin_right = 497.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 0

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Music"]
margin_right = 99.0
margin_bottom = 100.0
size_flags_vertical = 3
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Music"
align = 1
valign = 1

[node name="MuteMusicButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Music"]
unique_name_in_owner = true
margin_left = 103.0
margin_right = 193.0
margin_bottom = 100.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Music"]
unique_name_in_owner = true
margin_left = 197.0
margin_right = 497.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.8
step = 0.01

[node name="SFX" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1"]
margin_top = 104.0
margin_right = 470.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 0

[node name="SfxLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/SFX"]
margin_right = 72.0
margin_bottom = 100.0
size_flags_vertical = 3
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Sfx"
align = 1
valign = 1

[node name="MuteSFXButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/SFX"]
unique_name_in_owner = true
margin_left = 76.0
margin_right = 166.0
margin_bottom = 100.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="SfxSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/SFX"]
unique_name_in_owner = true
margin_left = 170.0
margin_right = 470.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="Volume" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1"]
margin_top = 208.0
margin_right = 521.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 0

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Volume"]
margin_right = 123.0
margin_bottom = 100.0
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Volume"
align = 1
valign = 1

[node name="MuteMasterButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Volume"]
unique_name_in_owner = true
margin_left = 127.0
margin_right = 217.0
margin_bottom = 100.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Volume"]
unique_name_in_owner = true
margin_left = 221.0
margin_right = 521.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1"]
margin_top = 312.0
margin_right = 281.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 0

[node name="FullscreenLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Fullscreen"]
margin_right = 187.0
margin_bottom = 100.0
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Fullscreen"
align = 1
valign = 1

[node name="FullscreenButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column1/Fullscreen"]
unique_name_in_owner = true
margin_left = 191.0
margin_right = 281.0
margin_bottom = 100.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Column2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 525.0
margin_right = 1003.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OnScreenControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2"]
margin_right = 478.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2/OnScreenControls"]
margin_right = 329.0
margin_bottom = 49.0
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "OnScreenControls"
align = 1
valign = 1

[node name="OnScreenControlsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2/OnScreenControls"]
unique_name_in_owner = true
margin_left = 333.0
margin_right = 423.0
margin_bottom = 49.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Vibration" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2"]
margin_top = 53.0
margin_right = 478.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2/Vibration"]
margin_right = 169.0
margin_bottom = 49.0
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "Vibration"
align = 1
valign = 1

[node name="VibrationButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2/Vibration"]
unique_name_in_owner = true
margin_left = 173.0
margin_right = 263.0
margin_bottom = 49.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="LowQualityTextures" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2"]
margin_top = 106.0
margin_right = 478.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2/LowQualityTextures"]
margin_right = 384.0
margin_bottom = 49.0
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 4 )
text = "LowQualityTextures"
align = 1
valign = 1

[node name="LowQualityTexturesButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Column2/LowQualityTextures"]
unique_name_in_owner = true
margin_left = 388.0
margin_right = 478.0
margin_bottom = 49.0
rect_min_size = Vector2( 90, 0 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
